# django-backend-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml
apps/transactions/: models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: serializers.py  signals.py  urls.py  views.py
apps/users/tests/: test_users.py
apps/wallets/: models.py  serializers.py  urls.py  views.py
apps/wallets/migrations/: 0001_initial.py
walletapi/: asgi.py  settings.py  urls.py  wsgi.py
